# relay

./: CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-02-relay-mvp.md
src/: cli.rs  error.rs  main.rs
src/auth/: mod.rs  oauth.rs  storage.rs
src/commands/: auth.rs  connect.rs  mod.rs  ping.rs  run.rs  server.rs  tools.rs  update.rs
src/config/: interpolate.rs  mod.rs  store.rs  types.rs
src/mcp/: client.rs  mod.rs  protocol.rs
src/mcp/transport/: http.rs  mod.rs  sse.rs  stdio.rs  traits.rs
src/schema/: flags.rs
tests/: cli_test.rs  integration_test.rs  mock_server.rs  server_commands_test.rs
