[package]
name = "relay"
version = "0.2.0"
edition = "2021"
description = "CLI interface for MCP servers"
license = "MIT"
default-run = "relay"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
directories = "5"
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
owo-colors = "4"
tabled = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
textwrap = "0.16"

[[bin]]
name = "mock-server"
path = "src/bin/mock_server.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
